Change citation style to numeric

--- a/papers/hrr-paper/paper.tex
+++ b/papers/hrr-paper/paper.tex
@@ -98,8 +98,9 @@
 	hyperref=true,
 	url=false,
 	isbn=false,
-	citestyle=alphabetic,
-	style=alphabetic,
+	%citestyle=alphabetic,
+	citestyle=numeric,
+	%style=alphabetic,
 	maxcitenames=3,
 	maxbibnames=100,
 	backref=true,
