Add option to number citations as they appear

--- a/papers/hrr-paper/paper.tex
+++ b/papers/hrr-paper/paper.tex
@@ -101,6 +101,8 @@
 	%citestyle=alphabetic,
 	citestyle=numeric,
 	%style=alphabetic,
+	style=numeric,
+	sorting=none,
 	maxcitenames=3,
 	maxbibnames=100,
 	backref=true,
