Add bibtex entries and fix citations

--- a/papers/hrr-paper/paper.tex
+++ b/papers/hrr-paper/paper.tex
@@ -416,10 +416,10 @@ As described in \cite{Levy:2008:VectorSymbolicArchitectures}, every VSA has to i
 	
 	In addition, every VSA can be considered as a lossy compression technique, since binary operations on N-element vectors return N-element vectors as well.
 	
-	Depending of the way these three operations are implemented we can distinguish several popular VSAs, such as Holographic Reduced Representations \cite{hrr-1}, Circular HRRs \cite{circular-hrr}, Binary Spatter Codes \cite{bsc-1}, Holographic Graph Neurons\cite{Kleyko:2016:HolographicGraphNeuron}, Geometric Algebras\cite{Patyk-Lonska:2011:DistributedRepresentationsBased} and Random Permutations.
+	Depending of the way these three operations are implemented we can distinguish several popular VSAs, such as Holographic Reduced Representations \cite{Plate:1995:HolographicReducedRepresentations}, Circular HRRs \cite{circular-hrr}, Binary Spatter Codes \cite{Kanerva:1994:SpatterCodeEncoding}, Holographic Graph Neurons \cite{Kleyko:2016:HolographicGraphNeuron}, Geometric Algebras \cite{Patyk-Lonska:2011:DistributedRepresentationsBased} and Random Permutations.
 The most widely used ones are HRRs and they are briefly explained in section \ref{sec:hrr}.
 Authors in \cite{learning-language} have used them to solve word embedding problem for extremely large dataset by replacing computationally expensive big matrix factorization with iterative estimation algorithm based on HRRs.
-Some of the other work is centered around pattern recognition \cite{Kleyko:2016:PatternRecognitionVector}, functional large-scale cognitive architecture models \cite{spaun} and representing scene structure \cite{scene-structure}.
+Some of the other work is centered around pattern recognition \cite{Kleyko:2016:PatternRecognitionVector}, functional large-scale cognitive architecture models \cite{Eliasmith:2012:LargeScaleModel} and representing scene structure \cite{scene-structure}.
 Some preliminary theoretical assumptions have been made about ability to use them as agent controllers\cite{embedding-behaviour}, where a symbolic program is represented with a set of combined symbolic actions associated with actuator symbols and symbolic sensing.
 	
 	
@@ -430,7 +430,7 @@ Some preliminary theoretical assumptions have been made about ability to use the
 	\end{figure}
 	
 	
-	Authors in \cite{spaun} have demonstrated functional cognitive model Spaun, implemented as HRRs using biologically plausible models of neuron dynamics, is capable of performing 7 different cognitive tasks.
+	Authors in \cite{Eliasmith:2012:LargeScaleModel} have demonstrated functional cognitive model Spaun, implemented as HRRs using biologically plausible models of neuron dynamics, is capable of performing 7 different cognitive tasks.
 In serial memory task they show that model of forgetting exhibits similar behavior as human working memory due to limited capacity.
 Besides that, they report similarity between human working memory capacity and average number of items (symbols) that their model is capable of holding in memory.
 This successful model of forgetting is one of the reasons our work is centered around HRRs.
