Changed some figure captions for visual scene experiment

--- a/papers/hrr-paper/paper.tex
+++ b/papers/hrr-paper/paper.tex
@@ -645,20 +645,20 @@ This can be solved by editing the permuted Gaussian bell to have \(\sum_{i=0}^n 
 		\begin{subfigure}{0.45\columnwidth}
 			\center
 			\includegraphics[width=\linewidth]{img/coord_example_1.png}
-			\caption{Encoding of (x,y) location of an object}
+			\caption{Encoding of (x,y) location for "watch"}
 			\label{fig:encoding-coord}
 		\end{subfigure}
 		\begin{subfigure}{0.45\columnwidth}
 			\center
 			\includegraphics[width=\linewidth]{img/coord_example_2.png}
-			\caption{Encoding of an object ID as randomly sampled vector}
+			\caption{Encoding of "watch" object ID as randomly sampled vector}
 			\label{fig:encoding-object}
 		\end{subfigure}
 		
 				\begin{subfigure}{0.8\columnwidth}
 					\center
 					\includegraphics[width=\linewidth]{img/coord_example_3.png}
-					\caption{Encoding of the complete visual scene, containing information about all 7 objects and their locations}
+					\caption{Representation of the complete visual scene, containing information about all 7 objects and their locations}
 					\label{fig:encoding-scene}
 				\end{subfigure}
 			
